kubernetes/apps/networking/authelia/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/visible-groups: "administrators"
    hajimari.io/icon: "shield-account"
      #cert-manager.io/cluster-issuer: ca-issuer
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: &appname authelia
  namespace: networking
spec:
  ingressClassName: "traefik"
  rules:
  - host: &uri "authelia.${SECRET_DEV_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: *appname
            port:
              number: 80
  - host: "authelia.${SECRET_SAFESPACES_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: *appname
            port:
              number: 80
  - host: "authelia.${SECRET_LENAXIA_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: *appname
            port:
              number: 80
  tls:
  - hosts:
    - *uri
    secretName: *uri
  - hosts:
    - "authelia.${SECRET_SAFESPACES_DOMAIN}"
    secretName: "authelia.${SECRET_SAFESPACES_DOMAIN}"
  - hosts:
    - "authelia.${SECRET_LENAXIA_DOMAIN}"
    secretName: "authelia.${SECRET_LENAXIA_DOMAIN}"
